tests/ui/consts/const-eval/validate_uninhabited_zsts.stderr
error[E0080]: constructing invalid value: encountered a value of the never type `!`
  --> $DIR/validate_uninhabited_zsts.rs:17:33
   |
LL | const FOO: [empty::Empty; 3] = [foo(); 3];
   |                                 ^^^^^ evaluation of `FOO` failed inside this call
   |
note: inside `foo`
  --> $DIR/validate_uninhabited_zsts.rs:4:14
   |
LL |     unsafe { std::mem::transmute(()) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

error[E0080]: constructing invalid value at .0: encountered a value of uninhabited type `Void`
  --> $DIR/validate_uninhabited_zsts.rs:20:42
   |
LL | const BAR: [empty::Empty; 3] = [unsafe { std::mem::transmute(()) }; 3];
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAR` failed here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
